<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">queuerGhostbusters</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="loading">Loading</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="createAccount">Create Account</string>
    <string name="userhint">yourname@example.com</string>
    <string name="undo">Undo</string>
    <string name="undo_all">Undo All</string>
    <string name="item_deleted">Item deleted</string>
    <string name="n_items_deleted">%1$s items deleted</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_project">Add Project</string>
    <string name="no_projects">No projects!</string>
    <string name="no_tasks">No tasks!</string>
    <string name="action_edit_project">Edit project</string>
    <string name="remember_me">Remember Me</string>

</resources>
